--- a/index.html
+++ b/index.html
@@ -54,14 +54,18 @@
   <h5>Logistic Regression</h5>
   <p>Logistic Regression is a discriminative model that calculates the probability of a data point being in a specific class, in this case
     the probability of a team winning or losing.</p>
+    <p><img src = "images/logisticRegressionAccuracy.png" alt = "Logistic Regression Accuracy"></p>
   <h5>Random Forests</h5>
   <p>Random Forests is an ensemble method performed by bagging multiple random decision trees.  Bagging combines multiple decision trees
     to reduce the final variance which should improve the accuracy of the model.</p>
+    <p><img src = "images/randomForestAccuracy.png" alt = "Random Forest Accuracy"></p>
   <h5>Naïve Bayes</h5>
   <p>Naïve Bayes is a generative model working under the assumption that features are independent and classifies the data regardless of
     correlations between features.</p>
+    <p><img src = "images/naiveBayesAccuracy.png" alt = "Naive Bayes Accuracy"></p>
   <h5>Neural Networks</h5>
   <p>Neural Networks use a multitude of different nodes that sum up a series of weights for all the features to produce an output.</p>
+    <p><img src = "images/neuralNetworkAccuracy.png" alt = "Neural Network Accuracy"></p>
   <h5>XGBoost</h5>
   <p>XGBoost is an ensemble learning method similar to random forests in that it uses decision trees but uses gradient boosting. It
     helps to minimize both bias and variance by using a multitude of decision trees.</p>
@@ -77,6 +81,7 @@
     and had the worst accuracy on the training data. Most notably, the classifier was extremely confident in all of its predicted matchup
     s, even though it predicted many of them incorrectly. Random Forests consistently performed worse than both Neural Networks and
     Logistic Regression but better than Naïve Bayes.</p>
+    <p><img src = "images/allModelAccuracies.png" alt = "All Accuracies"></p>
   </section>
 </center>
 </body>
