--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1 class="project-name">CS4641</h1>
       <h2 class="project-tagline">Predicting March Madness</h2>
       <h2 class="project-tagline2">Nikhil Bose, Joel Joseprabu, Ji Won Lee, and Sandeep Veludhandi</h2>
-      <h3 class="project-tagline2" href="files/Project Proposal.pdf"></h3>
+      <h3 class="project-tagline2" href="files/Project Proposal.pdf">Project Proposal</h3>
   </section>
   <section class="main-content">
   <h3>Introduction and Motivation</h3>
