--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h4>XG Boosting</h4>
   <p></p>
   <h4>Combining our models: Pick Most Confident</h4>
-  <p>We wrote a script that would compare bracket predictions from our best models, which were logistic regression and neural networks. The script would compare the predictions in the two models and choose the prediction that had higher certainty, meaning the difference between winning rate of the two teams. The reason behind such decision was that the two models, logistic regression and neural networks had similar accuracy so we tested if combining the two models would improve our accuracy. There was a small improvement made. _INSERT STATISTIC_</p>
+  <p>We wrote a script that would compare bracket predictions from our best models, which were logistic regression and neural networks. The script would compare the predictions in the two models and choose the prediction that had higher certainty, meaning the difference between winning rate of the two teams. The reason behind such decision was that the two models, logistic regression and neural networks had similar accuracy so we tested if combining the two models would improve our accuracy. The log loss of the model did not change much but the brackets have improved accuracy by an average of _INSERT INFO___ . _INSERT STATISTIC_</p>
   <h4>Overall result</h4>
   <p>We evaluated each model using the log-loss for the 2018-2019 March Madness tournament as well as how many points the bracket would
     generate in the NCAA competition. Logistic Regression, along with Neural Networks, performed the best out of the first four
