added march madness image

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   </section>
   <section class="main-content">
   <h3>Introduction and Motivation</h3>
+    <p><img src = "images/marchMadness.jpg" alt = "March Madness" class = center></p>
   <p>The March Madness Tournament is the biggest college basketball tournament in America.
      Millions of people fill out brackets in hopes of correctly predicting the tournament and winning competitions and bets.
      However, in all the years the tournament has occurred, not a single person has created the perfect bracket yet.</p>
