--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
     height:300px;
     width:400px;
     }
+    ul {
+      margin-right:300px;
+      margin-left:300px;
+      text-align:left;
+      font-size:18px;
+      padding: 0;
+    }
+    h3.dataset-header {
+      margin-right:250px;
+      margin-left:250px;
+      text-align:left;
+      font-size:20px;
+      padding: 0;
+    }
+
     .center {
     display:block;
     margin-left:auto;
@@ -59,8 +74,139 @@
   <p>The dataset was acquired from Kaggle's 2019 March Madness competition. The dataset had recorded games from 2003-current and included
     regular season as well as tournament games, totaling to over 88000 games. The dataset included 14 features such as free throws made,
     steals, and offensive rebounds. For each game, the stats for each of those features was recorded and used in our analysis. Fortunately,
-    all the data was already quantified so we didn’t have to do it ourselves.</p>
-    <p><img src = "images/possibleFeatures.png" alt = "Possible Features" class = "center"></p>
+    most the data was already quantified so we didn’t have to do it ourselves. The only data we had to quantify was the location of the game.
+    We did this by having -1 represent an away game, 0 a neutral game, and 1 a home game.</p>
+  <h3 class="dataset-header">Our models used the following features for each team:</h3>
+  <ul style="list-style-type:disc;">
+    <li>Points Allowed</li>
+    <li>Points Scored</li>
+    <li>Field Goals Made</li>
+    <li>Field Goals Attempted</li>
+    <li>3 Pointers Made</li>
+    <li>Offensive Rebounds</li>
+    <li>Defensive Rebounds</li>
+    <li>Assists</li>
+    <li>Location of the Game (Home, Away, or Neutral)</li>
+    <li>Personal Fouls</li>
+    <li>Steals</li>
+    <li>Blocks</li>
+    <li>Turnovers</li>
+    <li>Free Throws Made</li>
+  </ul>
+  <h3 class="dataset-header">The different sets of features we ran our models with are listed below:</h3>
+  <table>
+  <tr>
+    <th>Feature Set Number</th>
+    <th>Features</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>
+      <ul style="list-style-type:disc;">
+        <li>Points allowed</li>
+        <li>Points scored</li>
+        <li>Field goals attempted</li>
+        <li>3 pointers made</li>
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>
+      <ul style="list-style-type:disc;">
+        <li>Offensive rebounds</li>
+        <li>Defensive rebounds</li>
+        <li>Assists</li>
+        <li>3 pointers made</li>
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>
+      <ul style="list-style-type:disc;">
+        <li>Steals</li>
+        <li>Blocks</li>
+        <li>Defensive rebounds</li>
+        <li>Personal fouls</li>
+        <li>Location of the game</li>
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>
+      <ul style="list-style-type:disc;">
+        <li>Assists</li>
+        <li>Turnovers</li>
+        <li>Points scored</li>
+        <li>Points allowed</li>
+        <li>3 pointers made</li>
+      </ul>
+    </td>
+  </tr>
+    <tr>
+    <td>5</td>
+    <td>
+      <ul style="list-style-type:disc;">
+        <li>Free throws made</li>
+        <li>2 pointers made</li>
+        <li>Field goals made</li>
+        <li>Assists</li>
+        <li>Points scored</li>
+        <li>Personal fouls</li>
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>
+      <ul style="list-style-type:disc;">
+        <li>Steals</li>
+        <li>Blocks</li>
+        <li>Defensive rebounds</li>
+        <li>Personal fouls</li>
+        <li>Assists</li>
+        <li>Field goals made</li>
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>
+      <ul style="list-style-type:disc;">
+        <li>Location of the game</li>
+        <li>Points scored</li>
+        <li>field goals made</li>
+        <li>field goals attempted</li>
+        <li>3 pointers made</li>
+        <li>Free throws made</li>
+        <li>Offensive rebounds</li>
+        <li>Assists</li>
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>
+      <ul style="list-style-type:disc;">
+        <li>Location of the game</li>
+        <li>Points scored</li>
+        <li>Points allowed</li>
+        <li>field goals made</li>
+        <li>field goals attempted</li>
+        <li>3 pointers made</li>
+        <li>Free throws made</li>
+        <li>Offensive rebounds</li>
+        <li>Assists</li>
+        <li>Steals</li>
+        <li>Blocks</li>
+        <li>Defensive rebounds</li>
+        <li>Personal fouls</li>
+      </ul>
+    </td>
+  </tr>
+  </table>
   <h3>Approach</h3>
   <p>We evaluated all the games using different subsets of features. One subset could be using 3 pointers made, turnovers, and field goals
     made, and score, while another subset could be fouls, assists, and defensive rebounds. We used sets of features that we thought would
