--- a/index.html
+++ b/index.html
@@ -7,69 +7,18 @@
       }
     h1 {
       text-align:center;
-      font-size:35px;
       }
     h2 {
       text-align:center;
-      font-size:30px;
       }
     h3 {
-      margin-left:250px;
-      text-align:left;
-      font-size:25px;
+      text-align:center;
       }
     p {
       margin-right:300px;
       margin-left:300px;
-      text-align:left;
-      font-size:20px;
+      text-align:center;
       }
-    img {
-    height:300px;
-    width:400px;
-    }
-    ul {
-      margin-right:300px;
-      margin-left:300px;
-      text-align:left;
-      font-size:18px;
-      padding: 0;
-    }
-    ul.table {
-      text-align: left;
-    }
-
-    ul.odd-feature-number {
-      margin-right:300px;
-      margin-left:300px;
-      text-align:left;
-      font-size:18px;
-      padding: 0;
-      background: #f69546;
-    }
-    h3.dataset-header {
-      margin-right:250px;
-      margin-left:250px;
-      text-align:left;
-      font-size:20px;
-      padding: 0;
-    }
-    table.t2 {
-      border-collapse: collapse;
-    }
-
-    table, th, td {
-      border: 1px solid black;
-      font-size: 20px;
-      text-align: center;
-      padding: 5px 30px;
-    }
-    .center {
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    width:50%;
-    }
   </style>
 </head>
 <body>
@@ -82,7 +31,6 @@
   </section>
   <section class="main-content">
   <h3>Introduction and Motivation</h3>
-    <p><img src = "images/marchMadness.jpg" alt = "March Madness" class = center></p>
   <p>The March Madness Tournament is the biggest college basketball tournament in America.
      Millions of people fill out brackets in hopes of correctly predicting the tournament and winning competitions and bets.
      However, in all the years the tournament has occurred, not a single person has created the perfect bracket yet.</p>
@@ -92,142 +40,10 @@
     happen. By using machine learning techniques, such as neural networks and random forests, we hope to find what causes a team to push
     through a tournament and win it all.</p>
   <h3>Dataset</h3>
-  <p>The dataset was acquired from Kaggle's 2019 March Madness competition. The dataset had recorded games from 2003-current and included
+  <p>The dataset was acquired from Kaggle’s 2019 March Madness competition. The dataset had recorded games from 2003-current and included
     regular season as well as tournament games, totaling to over 88000 games. The dataset included 14 features such as free throws made,
     steals, and offensive rebounds. For each game, the stats for each of those features was recorded and used in our analysis. Fortunately,
-    most the data was already quantified so we didn’t have to do it ourselves. The only data we had to quantify was the location of the game.
-    We did this by having -1 represent an away game, 0 a neutral game, and 1 a home game.</p>
-  <h3 class="dataset-header">Our models used the following features for each team:</h3>
-  <ul style="list-style-type:disc;">
-    <li>Points Allowed</li>
-    <li>Points Scored</li>
-    <li>Field Goals Made</li>
-    <li>Field Goals Attempted</li>
-    <li>3 Pointers Made</li>
-    <li>Offensive Rebounds</li>
-    <li>Defensive Rebounds</li>
-    <li>Assists</li>
-    <li>Location of the Game (Home, Away, or Neutral)</li>
-    <li>Personal Fouls</li>
-    <li>Steals</li>
-    <li>Blocks</li>
-    <li>Turnovers</li>
-    <li>Free Throws Made</li>
-  </ul>
-  <h3 class="dataset-header">The different sets of features we ran our models with are listed below:</h3>
-  <table class="t2">
-  <tr>
-    <th>Feature Set</th>
-    <th>Features</th>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>
-      <ul class="table" style="list-style-type:disc;">
-        <li>Points allowed</li>
-        <li>Points scored</li>
-        <li>Field goals attempted</li>
-        <li>3 pointers made</li>
-      </ul>
-    </td>
-  </tr>
-  <tr>
-    <td>2</td>
-    <td>
-      <ul style="list-style-type:disc;">
-        <li>Offensive rebounds</li>
-        <li>Defensive rebounds</li>
-        <li>Assists</li>
-        <li>3 pointers made</li>
-      </ul>
-    </td>
-  </tr>
-  <tr>
-    <td>3</td>
-    <td>
-      <ul style="list-style-type:disc;">
-        <li>Steals</li>
-        <li>Blocks</li>
-        <li>Defensive rebounds</li>
-        <li>Personal fouls</li>
-        <li>Location of the game</li>
-      </ul>
-    </td>
-  </tr>
-  <tr>
-    <td>4</td>
-    <td>
-      <ul style="list-style-type:disc;">
-        <li>Assists</li>
-        <li>Turnovers</li>
-        <li>Points scored</li>
-        <li>Points allowed</li>
-        <li>3 pointers made</li>
-      </ul>
-    </td>
-  </tr>
-    <tr>
-    <td>5</td>
-    <td>
-      <ul style="list-style-type:disc;">
-        <li>Free throws made</li>
-        <li>2 pointers made</li>
-        <li>Field goals made</li>
-        <li>Assists</li>
-        <li>Points scored</li>
-        <li>Personal fouls</li>
-      </ul>
-    </td>
-  </tr>
-  <tr>
-    <td>6</td>
-    <td>
-      <ul style="list-style-type:disc;">
-        <li>Steals</li>
-        <li>Blocks</li>
-        <li>Defensive rebounds</li>
-        <li>Personal fouls</li>
-        <li>Assists</li>
-        <li>Field goals made</li>
-      </ul>
-    </td>
-  </tr>
-  <tr>
-    <td>7</td>
-    <td>
-      <ul style="list-style-type:disc;">
-        <li>Location of the game</li>
-        <li>Points scored</li>
-        <li>Field goals made</li>
-        <li>Field goals attempted</li>
-        <li>3 pointers made</li>
-        <li>Free throws made</li>
-        <li>Offensive rebounds</li>
-        <li>Assists</li>
-      </ul>
-    </td>
-  </tr>
-  <tr>
-    <td>8</td>
-    <td>
-      <ul style="list-style-type:disc;">
-        <li>Location of the game</li>
-        <li>Points scored</li>
-        <li>Points allowed</li>
-        <li>Field goals made</li>
-        <li>Field goals attempted</li>
-        <li>3 pointers made</li>
-        <li>Free throws made</li>
-        <li>Offensive rebounds</li>
-        <li>Assists</li>
-        <li>Steals</li>
-        <li>Blocks</li>
-        <li>Defensive rebounds</li>
-        <li>Personal fouls</li>
-      </ul>
-    </td>
-  </tr>
-  </table>
+    all the data was already quantified so we didn’t have to do it ourselves.</p>
   <h3>Approach</h3>
   <p>We evaluated all the games using different subsets of features. One subset could be using 3 pointers made, turnovers, and field goals
     made, and score, while another subset could be fouls, assists, and defensive rebounds. We used sets of features that we thought would
@@ -236,38 +52,22 @@
     Additionally, we used XGBoost as a means of increasing the accuracy of our results as well as incorporating a new feature, seeding,
     when we construct our bracket. Since we had multiple models that worked well, we decided to implement a new method which would pick the
     most confident choice out of all the models.</p>
-  <h4>Logistic Regression</h4>
+  <h5>Logistic Regression</h5>
   <p>Logistic Regression is a discriminative model that calculates the probability of a data point being in a specific class, in this case
     the probability of a team winning or losing.</p>
-<<<<<<< HEAD
     <p><img src = "images/logisticRegressionAccuracy.png" alt = "Logistic Regression Accuracy"></p>
-  <h4>Random Forests</h4>
-  <p>Random Forests is an ensemble method performed by bagging multiple random decision trees.  Bagging combines multiple decision trees
-    to reduce the final variance which should improve the accuracy of the model.</p>
-    <p><img src = "images/randomForestAccuracy.png" alt = "Random Forest Accuracy"></p>
-  <h4>Naïve Bayes</h4>
-  <p>Naïve Bayes is a generative model working under the assumption that features are independent and classifies the data regardless of
-    correlations between features.</p>
-    <p><img src = "images/naiveBayesAccuracy.png" alt = "Naive Bayes Accuracy"></p>
-  <h4>Neural Networks</h4>
-  <p>Neural Networks use a multitude of different nodes that sum up a series of weights for all the features to produce an output.</p>
-    <p><img src = "images/neuralNetworkAccuracy.png" alt = "Neural Network Accuracy"></p>
-  <h4>XGBoost</h4>
-=======
-    <p><img src = "images/logisticRegressionAccuracy.png" alt = "Logistic Regression Accuracy" class = "center"></p>
   <h5>Random Forests</h5>
   <p>Random Forests is an ensemble method performed by bagging multiple random decision trees.  Bagging combines multiple decision trees
     to reduce the final variance which should improve the accuracy of the model.</p>
-    <p><img src = "images/randomForestAccuracy.png" alt = "Random Forest Accuracy" class = "center"></p>
+    <p><img src = "images/randomForestAccuracy.png" alt = "Random Forest Accuracy"></p>
   <h5>Naïve Bayes</h5>
   <p>Naïve Bayes is a generative model working under the assumption that features are independent and classifies the data regardless of
     correlations between features.</p>
-    <p><img src = "images/naiveBayesAccuracy.png" alt = "Naive Bayes Accuracy" class = "center"></p>
+    <p><img src = "images/naiveBayesAccuracy.png" alt = "Naive Bayes Accuracy"></p>
   <h5>Neural Networks</h5>
   <p>Neural Networks use a multitude of different nodes that sum up a series of weights for all the features to produce an output.</p>
-    <p><img src = "images/neuralNetworkAccuracy.png" alt = "Neural Network Accuracy" class = "center"></p>
+    <p><img src = "images/neuralNetworkAccuracy.png" alt = "Neural Network Accuracy"></p>
   <h5>XGBoost</h5>
->>>>>>> effae5d92d4530f47ac611af2b62e2f166e5825a
   <p>XGBoost is an ensemble learning method similar to random forests in that it uses decision trees but uses gradient boosting. It
     helps to minimize both bias and variance by using a multitude of decision trees.
   </p>
@@ -290,7 +90,7 @@
     and had the worst accuracy on the training data. Most notably, the classifier was extremely confident in all of its predicted matchup
     s, even though it predicted many of them incorrectly. Random Forests consistently performed worse than both Neural Networks and
     Logistic Regression but better than Naïve Bayes.</p>
-    <p><img src = "images/allModelAccuracies.png" alt = "All Accuracies" class = "center"></p>
+    <p><img src = "images/allModelAccuracies.png" alt = "All Accuracies"></p>
   </section>
 </center>
 </body>
