--- a/index.html
+++ b/index.html
@@ -239,7 +239,6 @@
   <h4>Logistic Regression</h4>
   <p>Logistic Regression is a discriminative model that calculates the probability of a data point being in a specific class, in this case
     the probability of a team winning or losing.</p>
-<<<<<<< HEAD
     <p><img src = "images/logisticRegressionAccuracy.png" alt = "Logistic Regression Accuracy"></p>
   <h4>Random Forests</h4>
   <p>Random Forests is an ensemble method performed by bagging multiple random decision trees.  Bagging combines multiple decision trees
@@ -252,9 +251,6 @@
   <h4>Neural Networks</h4>
   <p>Neural Networks use a multitude of different nodes that sum up a series of weights for all the features to produce an output.</p>
     <p><img src = "images/neuralNetworkAccuracy.png" alt = "Neural Network Accuracy"></p>
-  <h4>XGBoost</h4>
-=======
-    <p><img src = "images/logisticRegressionAccuracy.png" alt = "Logistic Regression Accuracy" class = "center"></p>
   <h5>Random Forests</h5>
   <p>Random Forests is an ensemble method performed by bagging multiple random decision trees.  Bagging combines multiple decision trees
     to reduce the final variance which should improve the accuracy of the model.</p>
@@ -263,25 +259,24 @@
   <p>Naïve Bayes is a generative model working under the assumption that features are independent and classifies the data regardless of
     correlations between features.</p>
     <p><img src = "images/naiveBayesAccuracy.png" alt = "Naive Bayes Accuracy" class = "center"></p>
-  <h5>Neural Networks</h5>
-  <p>Neural Networks use a multitude of different nodes that sum up a series of weights for all the features to produce an output.</p>
-    <p><img src = "images/neuralNetworkAccuracy.png" alt = "Neural Network Accuracy" class = "center"></p>
-  <h5>XGBoost</h5>
->>>>>>> effae5d92d4530f47ac611af2b62e2f166e5825a
+  <h4>XGBoost</h4>
   <p>XGBoost is an ensemble learning method similar to random forests in that it uses decision trees but uses gradient boosting. It
     helps to minimize both bias and variance by using a multitude of decision trees.
   </p>
+  <h4>Pick Most Confident (Our own ensemble Method)</h4>
+  <p>We wrote a script that would compare bracket predictions from all of our models (, which were logistic regression and neural networks. The script would compare the predictions in the two models and choose the prediction that had higher certainty, meaning the difference between winning rate of the two teams. The reason behind such decision was that the two models, logistic regression and neural networks had similar accuracy so we tested if combining the two models would improve our accuracy.</p>
   <h4>Seeding</h4>
   <p>Upsets in basketball occur when a higher seeded team loses to a much worse team. Of the 63 games played over the course of each
     tournament since 1985, there has been on average 12 upsets per tournament. Due to this, we created a higher threshold for lower
     seeded teams to win; teams that are lower seeded need to have higher than a 50% chance to win in order to move on in the bracket.</p>
   <h3>Results</h3>
   <h4>Seeding</h4>
-  <p>Our implementation of seeding has been proven to be quite useful. Given a equal probability distribution (which scored 12 points for its prediction), the seeding implementation predicted a bracket that scored 76. That's roughly a 500% improvement!</p>
+  <p>Our implementation of seeding has been proven to be quite useful. Given a equal probability distribution (which scored 12 points for its prediction), the seeding implementation predicted a bracket that scored 76. That's roughly a 500% improvement! Unfortunately, the effects of seeding isn't necessarily positive and depends on the model it is applied to. It was observed that for ensemble methods such as XGBoosting or our Pick Most Confident method, the seeding had negative effects. WHY?________________. Outside of the ensemble methods, we also noticed a trend that the degree to the improvement in accuracy made by the seeding is affected by the initial accuracy of the model. WHY?____This is a result of our algorithm making a decision based on the probabilities the model give, which means if the model gives inaccurate probabilities, then our seeding implementation will make a worse decision.</p>
+  <p><img src = "images/seedingImprovementModelsGraph.PNG" alt = "All Accuracies" class = "center"></p>
   <h4>XG Boosting</h4>
-  <p>XGBoosting was </p>
+  <p><img src = "images/xgBoost.PNG" alt = "All Accuracies" class = "center"></p>
   <h4>Combining our models: Pick Most Confident</h4>
-  <p>We wrote a script that would compare bracket predictions from our best models, which were logistic regression and neural networks. The script would compare the predictions in the two models and choose the prediction that had higher certainty, meaning the difference between winning rate of the two teams. The reason behind such decision was that the two models, logistic regression and neural networks had similar accuracy so we tested if combining the two models would improve our accuracy. The log loss of the model did not change much but the brackets have improved accuracy by an average of _INSERT INFO___ . _INSERT STATISTIC_</p>
+  <p><img src = "images/pickMostConfident.PNG" alt = "All Accuracies" class = "center"></p>
   <h4>Overall result</h4>
   <p>We evaluated each model using the log-loss for the 2018-2019 March Madness tournament as well as how many points the bracket would
     generate in the NCAA competition. Logistic Regression, along with Neural Networks, performed the best out of the first four
@@ -289,7 +284,7 @@
     own logistic regression it uses to calculate the weights. Out of all the feature sets, Naïve Bayes consistently performed the worst
     and had the worst accuracy on the training data. Most notably, the classifier was extremely confident in all of its predicted matchup
     s, even though it predicted many of them incorrectly. Random Forests consistently performed worse than both Neural Networks and
-    Logistic Regression but better than Naïve Bayes.</p>
+    Logistic Regression but better than Naïve Bayes. For our personal </p>
     <p><img src = "images/allModelAccuracies.png" alt = "All Accuracies" class = "center"></p>
   </section>
 </center>
