forgot last part.

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     own logistic regression it uses to calculate the weights. Out of all the feature sets, Naïve Bayes consistently performed the worst
     and had the worst accuracy on the training data. Most notably, the classifier was extremely confident in all of its predicted matchup
     s, even though it predicted many of them incorrectly. Random Forests consistently performed worse than both Neural Networks and
-    Logistic Regression but better than Naïve Bayes. For our personal </p>
+    Logistic Regression but better than Naïve Bayes. Our seeding implementation was effective but only had a positive impact when using it in combination with one model and the degree of its impact on the prediction of the bracket was dependent on the accuracy of the model it was used in combination with.</p>
     <p><img src = "images/allModelAccuracies.png" alt = "All Accuracies" class = "center"></p>
   </section>
 </center>
