--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
       }
     h1 {
       text-align:center;
-      font-size:35px;
+      font-size:40px;
       }
     h2 {
       text-align:center;
-      font-size:30px;
+      font-size:35px;
       }
     h3 {
       margin-left:250px;
       text-align:left;
+      font-size:30px;
+      }
+    h4 {
       font-size:25px;
       }
     p {
@@ -232,42 +235,26 @@
   <p>We evaluated all the games using different subsets of features. One subset could be using 3 pointers made, turnovers, and field goals
     made, and score, while another subset could be fouls, assists, and defensive rebounds. We used sets of features that we thought would
     perform the best and compared the results against other sets.</p>
-  <p>The different supervised learning models we used were Logistic Regression, Random Forests, Naïve Bayes, and Neural Networks.
+  <p>The different supervised learning models we used were Logistic Regression, Random Forests, Naive Bayes, and Neural Networks.
     Additionally, we used XGBoost as a means of increasing the accuracy of our results as well as incorporating a new feature, seeding,
     when we construct our bracket. Since we had multiple models that worked well, we decided to implement a new method which would pick the
     most confident choice out of all the models.</p>
   <h4>Logistic Regression</h4>
   <p>Logistic Regression is a discriminative model that calculates the probability of a data point being in a specific class, in this case
     the probability of a team winning or losing.</p>
-<<<<<<< HEAD
-    <p><img src = "images/logisticRegressionAccuracy.png" alt = "Logistic Regression Accuracy"></p>
+    <img src = "images/logisticRegressionAccuracy.png" alt = "Logistic Regression Accuracy">
   <h4>Random Forests</h4>
   <p>Random Forests is an ensemble method performed by bagging multiple random decision trees.  Bagging combines multiple decision trees
     to reduce the final variance which should improve the accuracy of the model.</p>
-    <p><img src = "images/randomForestAccuracy.png" alt = "Random Forest Accuracy"></p>
-  <h4>Naïve Bayes</h4>
-  <p>Naïve Bayes is a generative model working under the assumption that features are independent and classifies the data regardless of
+    <img src = "images/randomForestAccuracy.png" alt = "Random Forest Accuracy">
+  <h4>Naive Bayes</h4>
+  <p>Naive Bayes is a generative model working under the assumption that features are independent and classifies the data regardless of
     correlations between features.</p>
-    <p><img src = "images/naiveBayesAccuracy.png" alt = "Naive Bayes Accuracy"></p>
+    <img src = "images/naiveBayesAccuracy.png" alt = "Naive Bayes Accuracy"><
   <h4>Neural Networks</h4>
   <p>Neural Networks use a multitude of different nodes that sum up a series of weights for all the features to produce an output.</p>
-    <p><img src = "images/neuralNetworkAccuracy.png" alt = "Neural Network Accuracy"></p>
+    <img src = "images/neuralNetworkAccuracy.png" alt = "Neural Network Accuracy">
   <h4>XGBoost</h4>
-=======
-    <p><img src = "images/logisticRegressionAccuracy.png" alt = "Logistic Regression Accuracy" class = "center"></p>
-  <h5>Random Forests</h5>
-  <p>Random Forests is an ensemble method performed by bagging multiple random decision trees.  Bagging combines multiple decision trees
-    to reduce the final variance which should improve the accuracy of the model.</p>
-    <p><img src = "images/randomForestAccuracy.png" alt = "Random Forest Accuracy" class = "center"></p>
-  <h5>Naïve Bayes</h5>
-  <p>Naïve Bayes is a generative model working under the assumption that features are independent and classifies the data regardless of
-    correlations between features.</p>
-    <p><img src = "images/naiveBayesAccuracy.png" alt = "Naive Bayes Accuracy" class = "center"></p>
-  <h5>Neural Networks</h5>
-  <p>Neural Networks use a multitude of different nodes that sum up a series of weights for all the features to produce an output.</p>
-    <p><img src = "images/neuralNetworkAccuracy.png" alt = "Neural Network Accuracy" class = "center"></p>
-  <h5>XGBoost</h5>
->>>>>>> effae5d92d4530f47ac611af2b62e2f166e5825a
   <p>XGBoost is an ensemble learning method similar to random forests in that it uses decision trees but uses gradient boosting. It
     helps to minimize both bias and variance by using a multitude of decision trees.
   </p>
@@ -275,22 +262,28 @@
   <p>Upsets in basketball occur when a higher seeded team loses to a much worse team. Of the 63 games played over the course of each
     tournament since 1985, there has been on average 12 upsets per tournament. Due to this, we created a higher threshold for lower
     seeded teams to win; teams that are lower seeded need to have higher than a 50% chance to win in order to move on in the bracket.</p>
-  <h3>Results</h3>
-  <h4>Seeding</h4>
-  <p>Our implementation of seeding has been proven to be quite useful. Given a equal probability distribution (which scored 12 points for its prediction), the seeding implementation predicted a bracket that scored 76. That's roughly a 500% improvement!</p>
-  <h4>XG Boosting</h4>
-  <p>XGBoosting was </p>
+  <p>Our implementation of seeding has been proven to be quite useful. Given a equal probability distribution
+    (which scored 12 points for its prediction), the seeding implementation predicted a bracket that scored 76.
+    That's roughly a 500% improvement! Our 5 highest scoring brackets all used seeding and there was a 5.4% increase in
+    the average points of the brackets going from unseeded to seeded.</p>
   <h4>Combining our models: Pick Most Confident</h4>
-  <p>We wrote a script that would compare bracket predictions from our best models, which were logistic regression and neural networks. The script would compare the predictions in the two models and choose the prediction that had higher certainty, meaning the difference between winning rate of the two teams. The reason behind such decision was that the two models, logistic regression and neural networks had similar accuracy so we tested if combining the two models would improve our accuracy. The log loss of the model did not change much but the brackets have improved accuracy by an average of _INSERT INFO___ . _INSERT STATISTIC_</p>
+  <p>We wrote a script that would compare bracket predictions from our best models, which were logistic regression and
+    neural networks. The script would compare the predictions in the two models and choose the prediction that had
+    higher certainty, meaning the difference between winning rate of the two teams. The reason behind such decision was
+    that the two models, logistic regression and neural networks had similar accuracy so we tested if combining the two
+    models would improve our accuracy. The log loss of the model did not change much but the brackets have improved
+    accuracy by an average of 2%.</p>
+    <!-- <img src = "images/mostConfidentPoints.png" alt = "Most Confident Points"> -->
   <h4>Overall result</h4>
   <p>We evaluated each model using the log-loss for the 2018-2019 March Madness tournament as well as how many points the bracket would
     generate in the NCAA competition. Logistic Regression, along with Neural Networks, performed the best out of the first four
-    techniques and usually had a very close accuracy with Neural Networks. This is most likely the case because of the Neural Network’s
-    own logistic regression it uses to calculate the weights. Out of all the feature sets, Naïve Bayes consistently performed the worst
+    techniques and usually had a very close accuracy with Neural Networks. This is most likely the case because of the Neural Network's
+    own logistic regression it uses to calculate the weights. Out of all the feature sets, Naive Bayes consistently performed the worst
     and had the worst accuracy on the training data. Most notably, the classifier was extremely confident in all of its predicted matchup
     s, even though it predicted many of them incorrectly. Random Forests consistently performed worse than both Neural Networks and
-    Logistic Regression but better than Naïve Bayes.</p>
-    <p><img src = "images/allModelAccuracies.png" alt = "All Accuracies" class = "center"></p>
+    Logistic Regression but better than Naive Bayes. Our best bracket produced 124 points which is far above the national average.
+  </p>
+    <img src = "images/allModelAccuracies.png" alt = "All Accuracies" class = "center">
   </section>
 </center>
 </body>
